# verdryx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_cli.py  test_config.py  test_costper.py  test_drift.py  test_events.py  test_graders.py  test_models.py  test_otel.py  test_pricing.py  test_store.py
tests/fixtures/: agent-event.v0.2.schema.json  outcomes_sample.csv  outcomes_sample.ndjson
verdryx/: __init__.py  __main__.py  cli.py  config.py  costper.py  drift.py  events.py  graders.py  models.py  otel.py  pricing.py  store.py
